--- a/TFODCourseYT/1. Image Collection.ipynb
+++ b/TFODCourseYT/1. Image Collection.ipynb
@@ -326,7 +326,7 @@
   "kernelspec": {
    "display_name": "tfod",
    "language": "python",
-   "name": "tfod"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -338,7 +338,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cbdba0dd27f33d037da11c2079e3d92978d438183881a3cbc59d01db3cdb367c"
+   }
   }
  },
  "nbformat": 4,
